# cmake-tutorial

./: CMakeLists.txt  README.md
include/: sum.hh
lib/: sum.cc
src/: hello.cc
